# flext-tap-oracle-oic

./: .gitignore  .pre-commit-config.yaml  API_COVERAGE_ANALYSIS.md  CLAUDE.local.md  CLAUDE.md  LOGGING_MIGRATION.md  Makefile  README.md  config.json  config.json.example  generate_config.py  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
docs/: API_REFERENCE.md  CHANGELOG.md  EXAMPLES.md  FAQ.md  README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
reports/: pytest.xml
scripts/: generate_config.py
src/flext_tap_oracle_oic/: __init__.py  __main__.py  __version__.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  health.py  models.py  oic_config.py  protocols.py  settings.py  simple_api.py  streams.py  streams_consolidated.py  streams_core.py  streams_extended.py  streams_infrastructure.py  streams_monitoring.py  tap.py  tap_clean.py  tap_client.py  tap_config.py  tap_exceptions.py  tap_models.py  tap_streams.py  typings.py  utilities.py  version.py
src/flext_tap_oracle_oic/application/: __init__.py
src/flext_tap_oracle_oic/domain/: __init__.py  entities.py
src/flext_tap_oracle_oic/infrastructure/: di_container.py
src/tap_oracle_oic/: __init__.py  __main__.py  __version__.py  auth.py  config.py  health.py  streams.py  streams_core.py  streams_extended.py  streams_infrastructure.py  streams_monitoring.py  tap.py
tests/: DISABLED_TESTS.md  README.md  __init__.py  conftest.py  conftest_project.py  models.py  protocols.py  test_advanced_utils.py  test_advanced_utils.py.disabled  test_auth.py  test_client.py  test_e2e.py  test_e2e.py.disabled  test_e2e_complete.py  test_tap.py  test_tap_core.py  test_utils.py  typings.py  utilities.py  utils.py
tests/fixtures/: __init__.py
