[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "flext-tap-oracle-oic"
version = "0.7.0"
description = "FLEXT Tap Oracle OIC - Singer Tap for Oracle Integration Cloud"
authors = [{ name = "FLEXT Team", email = "team@flext.sh" }]
maintainers = [{ name = "FLEXT Team", email = "team@flext.sh" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Singer SDK and Oracle OIC dependencies
    "singer-sdk>=0.39.0",
    "requests>=2.32.0",
    "oracledb>=3.2.0",
]
keywords = [
    "flext",
    "singer",
    "tap",
    "oracle",
    "oic",
    "integration",
    "enterprise",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
tap-oracle-oic = "flext_tap_oracle_oic.tap:TapOracleOIC.cli"
flext-tap-oracle-oic = "flext_tap_oracle_oic.tap:TapOracleOIC.cli"

[tool.poetry]
name = "flext-tap-oracle-oic"
version = "0.7.0"
description = "FLEXT Tap Oracle OIC - Singer Tap for Oracle Integration Cloud"
authors = ["FLEXT Team <team@flext.sh>"]
readme = "README.md"
packages = [{ include = "flext_tap_oracle_oic", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

# Core FLEXT dependencies - primary source of truth
flext-core = { path = "../flext-core", develop = true }
flext-observability = { path = "../flext-observability", develop = true }

# Oracle OIC Tap specific dependencies
singer-sdk = ">=0.39.0"
requests = ">=2.32.0"
oracledb = ">=3.2.0"

# Core dependencies are managed by flext-core - no duplication
# pydantic, pydantic-settings, click, structlog, etc. come from flext-core

[tool.poetry.group.dev.dependencies]
# Development dependencies
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.12.0"
pytest-xdist = ">=3.6.0"
pytest-timeout = ">=2.3.1"
pytest-sugar = ">=1.0.0"
pytest-clarity = ">=1.0.1"
pytest-benchmark = ">=4.0.0"

# Code quality
ruff = ">=0.8.0"
mypy = ">=1.13.0"
pre-commit = ">=4.0.0"
bandit = ">=1.8.0"

# Documentation
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
mkdocs-mermaid2-plugin = ">=1.1.0"

[tool.poetry.scripts]
tap-oracle-oic = "flext_tap_oracle_oic.tap:TapOracleOIC.cli"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=flext_tap_oracle_oic",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-fail-under=90",
    "--maxfail=1",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "smoke: Smoke tests",
    "e2e: End-to-end tests",
    "oic: marks tests as Oracle Integration Cloud tests",
    "oracle: marks tests as Oracle database tests",
    "singer: marks tests as Singer protocol tests",
    "tap: marks tests as tap tests",
    "stream: marks tests as stream tests",
    "requires_oic: tests that need Oracle Integration Cloud access",
]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]
asyncio_mode = "auto"

# Ruff configuration - focused on src/ and tests/
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Line length and formatting (handled by formatter)
    "E501",   # line too long
    "W505",   # doc line too long
    "COM812", # trailing comma missing (conflicts with formatter)
    "ISC001", # single line implicit string concatenation

    # Import and dependency issues (common in Singer taps)
    "I001", # import block unsorted (handled by isort)
    "F401", # unused imports (common in __init__.py files)
    "F403", # star imports (common in __init__.py)
    "F405", # star import usage
    "F841", # unused variable (common in development)

    # Documentation style flexibility (Singer SDK patterns)
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D106", # missing docstring in public nested class
    "D107", # missing docstring in __init__
    "D203", # blank line before class docstring (conflicts with D211)
    "D213", # multi-line docstring summary second line (conflicts with D212)

    # Code style flexibility (Singer patterns)
    "ERA001", # commented out code (common during development)
    "TD002",  # missing author in TODO
    "TD003",  # missing issue link in TODO
    "FIX002", # line contains TODO
    "T201",   # print statement (common in scripts/debug)
    "T203",   # pprint statement

    # Complexity (Oracle OIC logic can be complex)
    "C901",    # function too complex
    "PLR0913", # too many arguments (OIC API needs many params)
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "PLR0912", # too many branches
    "PLR0911", # too many return statements

    # Type checking flexibility (Singer SDK uses Any extensively)
    "ANN401", # any type usage (Singer SDK requires Any types)

    # Security exceptions (Oracle OIC patterns)
    "S105", # possible hardcoded password (config patterns)
    "S106", # possible hardcoded password (test secrets)
    "S603", # subprocess call
    "S607", # starting process with partial executable path
    "S608", # possible SQL injection (handled by Oracle driver)

    # Error handling flexibility
    "EM101",  # raw string in exception
    "EM102",  # f-string in exception
    "TRY003", # avoid long exception messages
    "TRY300", # consider moving to else block
    "TRY301", # raise within try block

    # Oracle OIC specific patterns
    "PTH123",  # use Path.open() (config files need standard open)
    "PLC0415", # import should be at top-level (lazy imports for Oracle)

    # Performance (premature optimization in data extraction)
    "PERF203", # try-except in loop
    "PERF401", # manual list comprehension
]

# Test-specific ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "D102",
    "N801",
    "N802",
    "N806",
    "PLR2004",
    "F401",
    "PLC0415",
    "G004",
    "T201",
]
"**/tests/*.py" = [
    "S101",
    "D102",
    "N801",
    "N802",
    "N806",
    "PLR2004",
    "F401",
    "PLC0415",
    "G004",
    "T201",
]
"test_*.py" = [
    "S101",
    "D102",
    "N801",
    "N802",
    "N806",
    "PLR2004",
    "F401",
    "PLC0415",
    "G004",
    "T201",
]
"**/test_*.py" = [
    "S101",
    "D102",
    "N801",
    "N802",
    "N806",
    "PLR2004",
    "F401",
    "PLC0415",
    "G004",
    "T201",
]


# Auto-generated files - exclude from ALL linting
"**/proto/*_pb2.py" = ["ALL"]
"**/proto/*_pb2_grpc.py" = ["ALL"]
"**/*_pb2.py" = ["ALL"]
"**/*_pb2_grpc.py" = ["ALL"]
"**/generated/**/*.py" = ["ALL"]
[tool.ruff.lint.isort]
known-first-party = [
    "flext_tap_oracle_oic",
    "flext_core",
    "flext_observability",
]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration - focused on src/ and tests/
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Paths to check
files = ["src/flext_tap_oracle_oic", "tests"]

# Import discovery
# namespace_packages = true
# explicit_package_bases = true

# Error output
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Disable specific checks for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# External library stubs
[[tool.mypy.overrides]]
module = ["singer_sdk.*", "requests.*", "oracledb.*"]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
